kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-vertx
spec:
  ports:
  - port: 9000
    targetPort: 9000
    name: http
  selector:
    app: springboot-vertx
  type: NodePort
